View Issue Details

IDProjectCategoryView StatusLast Update
0024030Open CASCADEOCCT:Foundation Classespublic2013-12-19 13:57
ReporteremvAssigned Toemv 
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformLinux 
Product Version6.6.0 
Target Version6.7.0Fixed in Version6.7.0 
Summary0024030: Undefined reference to `NCollection_IncAllocator::DefaultBlockSize'
DescriptionMessage "Undefined reference to `NCollection_IncAllocator::DefaultBlockSize'" appears when building OCCT on Linux platform in Debug mode.
TagsNo tags attached.
Test case numberNot needed

Activities

emv

2013-06-17 15:40

developer   ~0024768

Git branch CR24030 is ready to be reviewed (http://git.dev.opencascade.org/gitweb/?p=occt.git;a=commit;h=ef0e2d912b1647f390faffa8cf572d40d00ac080).

pdn

2013-06-17 17:25

reporter   ~0024771

It looks really strange. Please specify the compiler version.

Resolution - reviewed

mkv

2013-06-18 15:38

tester   ~0024790

Dear BugMaster,

Branch CR24030 (and products from GIT master) was compiled on Linux and Windows platforms and tested.

Number of compiler warnings:

occt component :
Linux: 2 (2 on master)
Windows: 7 (7 on master)

products component :
Linux: 0 (0 on master)
Windows: 63 (63 on master)

Regressions:
No regressions

Improvements:
No improvements

Testing cases:
Not needed

Testing on Linux:
Total MEMORY difference: 365708956 / 365687144
Total CPU difference: 43786.850000001235 / 41189.44000000089

Testing on Windows:
Total MEMORY difference: 422722716 / 421615140
Total CPU difference: 35293.453125 / 37243.921875

There are not differences in images found by testdiff.

Related Changesets

occt: master 8ba3c5e0

2013-06-17 10:30:59

emv

Details Diff
0024030: Undefined reference to `NCollection_IncAllocator::DefaultBlockSize'. Affected Issues
0024030
mod - src/NCollection/NCollection_IncAllocator.cxx Diff File

Issue History

Date Modified Username Field Change
2013-06-17 13:28 emv New Issue
2013-06-17 13:28 emv Assigned To => emv
2013-06-17 15:40 emv Note Added: 0024768
2013-06-17 15:40 emv Assigned To emv => pdn
2013-06-17 15:40 emv Status new => resolved
2013-06-17 17:25 pdn Note Added: 0024771
2013-06-17 17:25 pdn Status resolved => reviewed
2013-06-18 09:46 mkv Assigned To pdn => mkv
2013-06-18 15:38 mkv Note Added: 0024790
2013-06-18 15:39 mkv Test case number => Not needed
2013-06-18 15:39 mkv Assigned To mkv => bugmaster
2013-06-18 15:39 mkv Status reviewed => tested
2013-06-18 16:04 emv Changeset attached => occt master 8ba3c5e0
2013-06-18 16:04 emv Assigned To bugmaster => emv
2013-06-18 16:04 emv Status tested => verified
2013-06-18 16:04 emv Resolution open => fixed
2013-08-21 14:48 bugmaster Product Version => 6.6.0
2013-08-21 14:48 bugmaster Target Version => 6.7.0
2013-12-19 13:52 bugmaster Status verified => closed
2013-12-19 13:57 bugmaster Fixed in Version => 6.7.0