0024030: Undefined reference to `NCollection_IncAllocator::DefaultBlockSize'.